Finish formatting form and input fields
I used flex-direction and wrap to get the input fields and their labels
in the right spots. I still need to swap the names around however to
match the example given by TOP. I also added text to the div above the
form and created the button and div w/text underneath the form.

--- a/index.html
+++ b/index.html
@@ -16,17 +16,47 @@
         </div>
     </div>
     <div class="right-side">
-        <h1 class="above-form-text"> This is a box of text!</h1>
+        <h1 class="above-form-text"> This is a sign up form for 
+            a service that doesn't exist! Feel free to use the sign
+            up form, but it won't do anything.<br>I promise!<br><br>
+            Sign up now!
+
+
+        </h1>
         <div class="form-box">
-            <form action="">
-                <fieldset>
-                    <legend>Let's do this!</legend>
-                    <label for="fname">First Name</label><br>
+            <div class="heading">Let's do this!</div>
+            <form>
+                <div class="fname">
+                    <label for="fname">FIRST NAME</label><br>
                     <input type="text" id="fname" name="fname"><br>
-                </fieldset>
+                </div>
+                <div class="lname">
+                    <label for="lname">LAST NAME</label><br>
+                    <input type="text" id="lname" name="lname"><br>
+                </div>
+                <div class="email">
+                    <label for="email">EMAIL</label><br>
+                    <input type="text" id="email" name="email"><br>
+                </div>
+                <div class="phone">
+                    <label for="phone">PHONE NUMBER</label><br>
+                    <input type="text" id="phone" name="phone"><br>
+                </div>
+                <div class="password">
+                    <label for="password">PASSWORD</label><br>
+                    <input type="password" id="password" name="password"><br>
+                </div>
+                <div class="confirmpass">
+                    <label for="confirmpass">CONFIRM PASSWORD</label><br>
+                    <input type="password" id="confirmpass" name="confirmpass"><br>
+                </div>
+                
             </form>
         </div>
-        <div class="create-account"></div>
+        <div class="create-account">
+            <button>Create Account</button>
+            <div class="log-in-text">Already have an account? Log in</div>
+        </div>
     </div>
 </body>
 </html>
