Add password validation and style button
I styled the button and added an offset border when the user clicks On
the button. I used javascript to validate the input in the password and
confirm password fields when the Create Account button is clicked. If
the passwords don't match, an error is shown saying that the passwords
don't match. In addition, the border of the  field turns red. The field
turns back to its original color when the correct password is input.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <label for="lname">LAST NAME</label><br>
                     <input type="text" id="lname" name="lname"><br>
                 </div>
+                <div class="password">
+                    <label for="password">PASSWORD</label><br>
+                    <input type="password" id="password" name="password"><br>
+                </div>
                 <div class="email">
                     <label for="email">EMAIL</label><br>
                     <input type="text" id="email" name="email"><br>
@@ -41,10 +45,6 @@
                 <div class="phone">
                     <label for="phone">PHONE NUMBER</label><br>
                     <input type="text" id="phone" name="phone"><br>
-                </div>
-                <div class="password">
-                    <label for="password">PASSWORD</label><br>
-                    <input type="password" id="password" name="password"><br>
                 </div>
                 <div class="confirmpass">
                     <label for="confirmpass">CONFIRM PASSWORD</label><br>
@@ -54,9 +54,10 @@
             </form>
         </div>
         <div class="create-account">
-            <button>Create Account</button>
+            <button type="submit">Create Account</button>
             <div class="log-in-text">Already have an account? Log in</div>
         </div>
     </div>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
